<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Magnificador</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_camera">Cámara</string>
    <string name="button_contrast">Contraste</string>
    <string name="button_menu">1 botón</string>
    <string name="button_menu4">4 botones</string>
    <string name="button_settings">Ajustes</string>
    <string name="opcion_1">Menu 1 opción</string>
    <string name="opcion_2">Menu 4 opciones</string>
    <string name="title_activity_menu1">Menu 1 Opción</string>
    <string name="title_activity_menu1_button">Menu 1 Opción</string>
    <string name="title_activity_settings">Ajustes</string>
    <string name="settings">Contraste</string>
    <string name="title_activity_camera">Magnificador</string>
    <string name="radioButtonBW">Blanco y negro</string>
    <string name="radioButtonBY">Amarillo y azul</string>
    <string name="saveButton">Guardar</string>
    <string name="radioButtonRY">Amarillo y rojo</string>
    <string name="menu_settings">Menú</string>
    <string name="one_option">1 opción</string>
    <string name="four_options">4 opciones</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_scroll_menu">Scroll Menú</string>
    <string name="title_activity_menu1_button_drawer">Menú 1 Opción</string>
    <string name="error">Error</string>
    <string name="title_activity_magnificador">Cámara</string>
    <string name="title_activity_umbral">Umbral</string>
    <string name="button_modes">Modos</string>
    <string name="button_colors">Colores</string>
    <string name="title_activity_modes">Modos de Visualización</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_rgb">Normal</string>
    <string name="button_gray">Grises</string>
    <string name="button_invert">Invertido</string>
    <string name="button_high_contrast">Contraste</string>
    <string name="title_activity_colors">Colores</string>
    <string name="button_fondo_claro">Fondo claro</string>
    <string name="button_fondo_oscuro">Fondo oscuro</string>
    <string name="title_activity_camera_settings">Ajustes de la cámara</string>
    <string name="button_encender_flash">Encender Flash</string>
    <string name="button_encender_macro">Encender Macro</string>
    <string name="button_encender_stab">Encender Estabilizador</string>
    <string name="button_apagar_flash">Apagar Flash</string>
    <string name="button_apagar_macro">Apagar Macro</string>
    <string name="button_apagar_stab">Apagar Estabilizador</string>
    <string name="Threshold">Umbral: </string>
    <string name="menu_color">Color de menú</string>
    <string name="title_activity_fondo_claro">Fondo Claro</string>
    <string name="sample">A</string>
    <string name="title_activity_dark_back">Fondos oscuros</string>
    <string name="title_activity_modes1_button">Modos de visualización</string>
    <string name="title_activity_colors1_button">Colores</string>
    <string name="radioButtonHC">Colores modo Alto Contraste</string>
    <string name="radioButtonWB">Negro y blanco</string>
    <string name="radioButtonBlackY">Amarillo y negro</string>
    <string name="radioButtonYBlack">Negro y amarillo</string>
    <string name="radioButtonBlueW">Azul y blanco</string>
    <string name="radioButtonWblue">Blanco y azul</string>
    <string name="radioButtonYBlue">Azul y amarillo</string>
    <string name="radioButtonRW">Blanco y rojo</string>
    <string name="radioButtonWR">Rojo y blanco</string>
    <string name="radioButtonYR">Rojo y amarillo</string>
    <string name="title_activity_camera_settings1_button">Ajustes de la cámara</string>

</resources>
