<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/modesLayout">

    <Button
        android:layout_height="0.0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/button_rgb"
        android:textColor="@color/text_bw"
        android:id="@+id/rgbButton"
        style="@style/button4x1"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_bw"/>

    <Button
        android:layout_height="0.0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/button_gray"
        android:textColor="@color/text_bw"
        android:id="@+id/grayButton"
        style="@style/button4x1"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_bw"/>

    <Button
        android:layout_height="0.0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/button_invert"
        android:textColor="@color/text_bw"
        android:id="@+id/invertButton"
        android:layout_marginTop="4dp"
        android:background="@drawable/button_bw"
        style="@style/button4x1"/>

    <Button
        android:layout_height="0.0dip"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:text="@string/button_high_contrast"
        android:textColor="@color/text_bw"
        android:id="@+id/highContrastButton"
        style="@style/button4x1"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_bw"/>
</LinearLayout>
